# rename

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  config.yml  feature.md  new-adapter.md
.github/workflows/: ci.yml  release.yml
Formula/: README.md  rename.rb  retitle.rb
docs/: COOKBOOK.md
macos-app/: .gitignore  Package.swift  build-app.sh
macos-app/Resources/: Info.plist
macos-app/Sources/Rename/: AppState.swift  ConfigStore.swift  DashboardView.swift  LaunchctlBridge.swift  MenuBarView.swift  Models.swift  OnboardingView.swift  RenameApp.swift  RenameCLI.swift  SettingsView.swift
macos-app/Sources/Rename/Resources/en.lproj/: Localizable.strings
macos-app/Sources/Rename/Resources/zh-Hans.lproj/: Localizable.strings
macos-app/Sources/Retitle/: AppState.swift  ConfigStore.swift  DashboardView.swift  LaunchctlBridge.swift  MenuBarView.swift  Models.swift  RetitleApp.swift  RetitleCLI.swift  SettingsView.swift  Toasts.swift
macos-app/Sources/Retitle/Resources/en.lproj/: Localizable.strings
macos-app/Sources/Retitle/Resources/zh-Hans.lproj/: Localizable.strings
src/rename/: __init__.py  cli.py  config.py  engine.py  service.py  state.py  util.py
src/rename/adapters/: _proto.py  aider.py  antigravity.py  continue_dev.py  zed.py
src/rename/namers/: __init__.py  base.py  cli_namer.py  heuristic.py
src/retitle/: __init__.py  cli.py  config.py  engine.py  models.py  service.py  state.py  util.py
src/retitle/adapters/: __init__.py  _sqlite.py  aider.py  antigravity.py  base.py  claude_code.py  codex.py  continue_dev.py  cursor.py  windsurf.py  zed.py
src/retitle/namers/: __init__.py  api.py  cli_namer.py  heuristic.py
tests/: test_adapters.py  test_cli.py  test_engine.py  test_heuristic.py  test_namers.py  test_util.py
windows-app/: README.md  pyproject.toml
windows-app/rename_gui/: __init__.py  __main__.py  app.py  bridge.py  config_store.py  i18n.py
windows-app/retitle_gui/: __init__.py  __main__.py  app.py  bridge.py  config_store.py  i18n.py
