[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rename"
version = "1.0.0"
description = "Keep your AI coding sessions named after what they actually became — Claude Code, Codex, Cursor and more."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "JingWen Fan" }]
keywords = [
    "claude-code",
    "codex",
    "cursor",
    "session",
    "rename",
    "ai",
    "productivity",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
]
# Zero runtime dependencies — everything runs on the Python standard library.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/study8677/rename"
Repository = "https://github.com/study8677/rename"
Issues = "https://github.com/study8677/rename/issues"

[project.scripts]
rename = "rename.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rename"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
