[project]
name = "rename-gui"
version = "0.1.0"
description = "Tray + dashboard GUI for rename (Windows / cross-platform)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "JingWen Fan" }]
dependencies = [
    "PySide6>=6.5",
    "rename",
]

[project.scripts]
rename-gui = "rename_gui.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rename_gui*"]
